memory modified, decode function is ready to use

--- a/Phase 1/.vscode/settings.json
+++ b/Phase 1/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "istream": "cpp",
+        "iterator": "cpp",
+        "xlocale": "cpp",
+        "xlocnum": "cpp",
+        "xstring": "cpp",
+        "xutility": "cpp",
+        "bitset": "cpp"
     }
 }
