--- a/Phase 2 (pipelined processor)/src/makefile
+++ b/Phase 2 (pipelined processor)/src/makefile
@@ -1,6 +1,6 @@
 
 all:
-	g++ riscv.cpp main.cpp functions.cpp components.cpp -I ../include
+	g++ riscv.cpp main.cpp functions.cpp components.cpp -I ../include -o ../bin/myRISCVSim
 
 clean:
 	rm -f *.o *~ *.bak ../bin/myRISCVSim
