--- a/Phase 2 (pipelined processor)/.vscode/settings.json
+++ b/Phase 2 (pipelined processor)/.vscode/settings.json
@@ -8,6 +8,16 @@
         "xlocnum": "cpp",
         "xstring": "cpp",
         "xutility": "cpp",
-        "bitset": "cpp"
+        "bitset": "cpp",
+        "*.tcc": "cpp",
+        "string": "cpp",
+        "exception": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "ostream": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "system_error": "cpp",
+        "typeinfo": "cpp"
     }
 }
